--- a/assets/blog.css
+++ b/assets/blog.css
@@ -1,17 +1,19 @@
 header {
     display: flex;
     border-bottom: 5px solid black;
+    flex-shrink: 1;
 }
 
 h5 {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     position: relative;
     flex-direction: row;
     font-size: 20px;
-    left: 1300px;
-    top: 1000px;
+    left: auto;
+    top: auto;
+    flex-shrink: 1;
 }
 
 ul {
@@ -22,7 +24,7 @@ ul {
     position: relative;
     flex-direction: column;
     font-size: 20px;
-    top: 1100px;
+    top: auto;
 }
 
 li {
@@ -38,10 +40,12 @@ a {
 
 footer {
     display: flex;
+    flex-shrink: 1;
 }
 
 .container {
     position: relative;
+    /* display: flex; */
 }
 
 .title {
@@ -61,11 +65,18 @@ footer {
     width: 70px;
     position: relative;
     flex-direction: row;
-    left: 1200px;
+    left: auto;
     font-size: 20px;
     margin: 8px;
+    flex-shrink: 1;
 }
 
+.btnContainer {
+    display:flex;
+    flex-shrink: 1;
+    justify-content: center;
+    align-items: center;
+}
 .dark {
     background-color: rgb(43, 31, 31);
     color: rgb(231, 222, 222);
@@ -76,6 +87,20 @@ footer {
     color: black;
   }
 
+@media (max-width: 768px) {
+    .btnContainer {
+        display: flex;
+        flex-direction: column;
+        width: 70%;
+    }
+
+    footer {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+}
 
 
 
