--- a/assets/styles.css
+++ b/assets/styles.css
@@ -77,6 +77,7 @@ textarea {
   width: 70px;
   font-size: 20px;
  margin: 8px;
+  cursor: grab;
 }
 
 #circle {
@@ -113,6 +114,7 @@ textarea {
   border: none;
   border-radius: 5px;
   width: 100px;
+  cursor: grab;
 }
 
 @media (max-width: 768px) {
@@ -143,9 +145,7 @@ textarea {
   }
 
   h2 {
-    font-size: 1.75em;
-  /* margin: 0; */
-  /* display: inline-flex; */
+  font-size: 1.75em;
   justify-content: center;
   align-items: center;
   position: relative;
